--- a/css/main.css
+++ b/css/main.css
@@ -102,12 +102,23 @@ main {
   height: 1500px;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1 {
   animation: type 2s steps(60, end);
   font-family: 'Great Vibes', cursive;
   font-size: 3em;
   overflow: hidden;
   white-space: nowrap;
+}
+
+h2 {
+  color: #fff;
+  font-family: 'Great Vibes', cursive;
+  font-size: 3em;
+  text-shadow: 1px 1px #000;
 }
 
 h3, p {
@@ -144,6 +155,8 @@ h1:nth-child(2){
   100%{ width: 100; }
 }
 
+/** PAGE 1 **/
+
 #page1 {
   background: #ffd9b3;
   height: 1200px;
@@ -166,13 +179,88 @@ h1:nth-child(2){
   display:none;
 }
 
+/** PAGE 2 **/
+
 #page2 {
+  background: black;
+  display: none;
+  height: 1200px;
+  position: fixed;
+  width: 100%;
+}
+
+#page2 ul {
+  list-style: none;
+}
+
+#titlePage2 {
+  margin-left: 33%;
+  margin-top: 8%;
+  position: fixed;
+  text-align: center;
+  width: 33%;
+}
+
+#titlePage2 svg {
+  padding-right: 3%;
+}
+
+#nav-menu {
+  margin-left: -5%;
+  margin-top: 15%;
+}
+
+.diamond {
+    width: 120px;
+    height: 120px;
+    border: 1px solid #fff;
+/* Rotate */
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+/* Rotate Origin */
+    -webkit-transform-origin: 0 100%;
+    -moz-transform-origin: 0 100%;
+    -ms-transform-origin: 0 100%;
+    -o-transform-origin: 0 100%;
+    transform-origin: 0 100%;
+    margin: 60px 0 10px 310px;
+}
+
+
+
+#menu-btn {
+  color: #fff;
+  content: "Menu";
+}
+
+#menu-btn-2nd, #story-btn-2nd {
+  display: none;
+}
+
+#our-story-btn {
+  margin-top: -.2%;
+}
+
+@media all and (min-width: 1200px){
+  #menu-btn-2nd, #story-btn-2nd {
+    display: block;
+    margin-top: -9.5%;
+    padding-left: -6px;
+  }
+}
+
+/** PAGE 3 **/
+
+#page3 {
   display: none;
   height: 1200px;
   position: fixed;
 }
 
-#page2 h1{
+#page3 h1{
   color: #fff;
   display: none;
   margin-left: 40%;
