--- a/css/main.css
+++ b/css/main.css
@@ -157,14 +157,15 @@ h1:nth-child(2){
 /** PAGE 1 **/
 
 #page1 {
-  background: #ffd9b3;
+  background: #99ebff;
   height: 1200px;
 }
 
 #page1 h1 {
   color: #fff;
+  font-size: 2.5em;
   margin: 0;
-  padding-left: 44%;
+  padding-left: 30%;
   padding-top: 15%;
   text-shadow: 1px 1px #000;
   width: 40%;
@@ -176,6 +177,13 @@ h1:nth-child(2){
 
 #ctaP1 {
   display:none;
+}
+
+@media all and (min-width: 1200px){
+  #page1 h1 {
+      font-size: 3em;
+      padding-left: 44%;
+  }
 }
 
 /** PAGE 2 **/
@@ -195,7 +203,9 @@ h1:nth-child(2){
   color: #fff;
   display: none;
   margin-left: 32%;
+  padding-bottom: 15%;
   padding-left: 2%;
+  padding-top: 10%;
   text-align: left;
   text-shadow: 1px 1px #000;
   width: 80%;
@@ -207,11 +217,14 @@ h1:nth-child(2){
 }
 
 #titlePage2 {
-  margin-left: 33%;
   margin-top: 8%;
   position: fixed;
   text-align: center;
-  width: 33%;
+  width: 100%;
+}
+
+#listP2 {
+  padding-left: 1%;
 }
 
 #pointerP2 {
@@ -227,27 +240,9 @@ h1:nth-child(2){
   margin-top: 15%;
 }
 
-.diamond {
-    width: 120px;
-    height: 120px;
-    border: 1px solid #fff;
-/* Rotate */
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-/* Rotate Origin */
-    -webkit-transform-origin: 0 100%;
-    -moz-transform-origin: 0 100%;
-    -ms-transform-origin: 0 100%;
-    -o-transform-origin: 0 100%;
-    transform-origin: 0 100%;
-    margin: 60px 0 10px 310px;
-}
-
 #nav-menu {
   display: none;
+  margin-right: 50%;
 }
 
 #menu-btn {
@@ -265,11 +260,48 @@ h1:nth-child(2){
   margin-top: -.2%;
 }
 
-#nav-story h3:hover {
-  color: red;
+@media all and (min-width: 400px){
+  #pageTitle2 {
+    padding-bottom: 20%;
+  }
 }
 
 @media all and (min-width: 1200px){
+
+  #pageTitle2 {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  #titlePage2 {
+    margin-left: 33%;
+    margin-top: 8%;
+    padding-bottom: 0;
+    padding-top: 0;
+    position: fixed;
+    text-align: center;
+    width: 33%;
+  }
+
+  .diamond {
+      width: 120px;
+      height: 120px;
+      border: 1px solid #fff;
+  /* Rotate */
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+  /* Rotate Origin */
+      -webkit-transform-origin: 0 100%;
+      -moz-transform-origin: 0 100%;
+      -ms-transform-origin: 0 100%;
+      -o-transform-origin: 0 100%;
+      transform-origin: 0 100%;
+      margin: 60px 0 10px 310px;
+  }
+
   #menu-btn-2nd, #story-btn-2nd {
     display: block;
     margin-top: -9.5%;
